--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "build-dev": "rimraf dist && cross-env NODE_ENV=development webpack --config ./build/webpack.config.js --progress --profile --colors --display-error-details",
     "build-test": "rimraf dist && cross-env NODE_ENV=production webpack --config ./build/webpack.config.js --progress --profile --colors --display-error-details",
     "build-prod": "rimraf dist && cross-env NODE_ENV=production webpack --config ./build/webpack.config.js --progress --profile --colors --display-error-details",
+    "build-analyz": "rimraf dist && cross-env NODE_ENV=production webpack --config ./build/webpack.config.analyz.js --progress --profile --colors --display-error-details",
     "start-webpack-dev-server": "npm run build-dev && webpack-dev-server --open",
     "start-express": "cross-env NODE_ENV=development node server.js",
     "rimraf": "rimraf dist"
   },
   "keywords": [
+    "spa",
+    "vue",
     "react"
   ],
   "author": "Neokekeke",
@@ -45,10 +48,14 @@
     "terser-webpack-plugin": "^4.1.0",
     "url-loader": "^4.1.0",
     "webpack": "^4.44.1",
+    "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-dev-server": "^3.11.0",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-merge": "^5.1.1"
+  },
+  "dependencies": {
+    "ramda": "^0.27.1"
   }
 }
