--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "webpack-dev-middleware": "^3.7.2",
     "webpack-dev-server": "^3.11.0",
     "webpack-hot-middleware": "^2.25.0",
-    "webpack-merge": "^5.1.1"
+    "webpack-merge": "^5.1.1",
+    "workbox-webpack-plugin": "^5.1.3"
   },
   "dependencies": {
     "ramda": "^0.27.1"
