--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "cross-env": "^7.0.2",
     "css-loader": "^4.2.1",
     "eslint": "^7.6.0",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-loader": "^4.0.2",
     "eslint-plugin-react": "^7.20.6",
     "express": "^4.17.1",
     "file-loader": "^6.0.0",
@@ -47,6 +49,8 @@
     "style-loader": "^1.2.1",
     "terser-webpack-plugin": "^4.1.0",
     "url-loader": "^4.1.0",
+    "vue-loader": "^15.9.3",
+    "vue-template-compiler": "^2.6.12",
     "webpack": "^4.44.1",
     "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.12",
@@ -57,6 +61,7 @@
     "workbox-webpack-plugin": "^5.1.3"
   },
   "dependencies": {
-    "ramda": "^0.27.1"
+    "ramda": "^0.27.1",
+    "vue": "^2.6.12"
   }
 }
