--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
   "dependencies": {
     "ramda": "^0.27.1",
     "vue": "^2.6.12",
-    "vue-router": "^3.4.3"
+    "vue-router": "^3.4.3",
+    "vuex": "^3.5.1"
   }
 }
