--- a/package.json
+++ b/package.json
@@ -29,13 +29,17 @@
   ],
   "devDependencies": {
     "@babel/core": "^7.11.1",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
     "autoprefixer": "^9.8.6",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "cross-env": "^7.0.2",
     "css-loader": "^4.2.1",
     "eslint": "^7.6.0",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-loader": "^4.0.2",
     "eslint-plugin-react": "^7.20.6",
     "express": "^4.17.1",
     "file-loader": "^6.0.0",
@@ -58,6 +62,7 @@
     "workbox-webpack-plugin": "^5.1.3"
   },
   "dependencies": {
+    "immutable": "^4.0.0-rc.12",
     "ramda": "^0.27.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
