--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "less": "^3.12.2",
     "less-loader": "^6.2.0",
     "mini-css-extract-plugin": "^0.10.0",
+    "open": "^7.2.1",
     "postcss-loader": "^3.0.0",
+    "redux-logger": "^3.0.6",
     "rimraf": "^3.0.2",
     "style-loader": "^1.2.1",
     "terser-webpack-plugin": "^4.1.0",
