--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-immutable": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0"
   }
 }
