--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "workbox-webpack-plugin": "^5.1.3"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "immutable": "^4.0.0-rc.12",
     "ramda": "^0.27.1",
     "react": "^16.13.1",
