--- a/package.json
+++ b/package.json
@@ -64,8 +64,8 @@
     "workbox-webpack-plugin": "^5.1.3"
   },
   "dependencies": {
-    "axios": "^0.21.0",
     "immutable": "^4.0.0-rc.12",
+    "lodash": "^4.17.20",
     "ramda": "^0.27.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
