--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "workbox-webpack-plugin": "^5.1.3"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.20",
     "ramda": "^0.27.1",
