--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-immutable": "^4.0.0",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0"
   }
