--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "workbox-webpack-plugin": "^5.1.3"
   },
   "dependencies": {
+    "core-js": "^3.9.1",
     "ramda": "^0.27.1",
     "vue": "^2.6.12",
     "vue-grid-layout": "^2.3.7",
