--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
+    "babel-plugin-import": "^1.13.3",
+    "core-js": "^3.9.1",
     "cross-env": "^7.0.2",
     "css-loader": "^4.2.1",
     "eslint": "^7.6.0",
@@ -68,6 +70,7 @@
     "workbox-webpack-plugin": "^5.1.3"
   },
   "dependencies": {
+    "antd": "^4.14.1",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "immutable": "^4.0.0-rc.12",
